2021-04-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/bitfields-bits1.c,
	  support/regression/tests/bitfields-checks.c,
	  support/regression/tests/bitfields-dead-loop.c:
	  Fix or disable host tests on hosts that allocate bitfields
	  in MSB to LSB order

2021-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bugs affecting z80 code generation for --reserve-regs-iy.

2021-04-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3216.c:
	  Fix bug #3216.

2021-04-23 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asxxsrc/asxxxx.h,
	  sdas/asxxsrc/asdata.c,
	  sdas/asxxsrc/asexpr.c,
	  sdas/asxxsrc/asmain.c:
	  Option to defer resolution of some symbols to link time, patch by Tony Pavlov.
	* src/SDCCopt.c,
	  support/regression/tests/bug-3215.c:
	  Fix bug #3215.
	* src/z80/gen.c:
	  Fix bug #3214.
	* support/valdiag/tests/bug-3010.c:
	  Simplify test.

2021-04-22 Philipp Klaus Krause <pkk AT spth.de>

	* sdcc/support/regression/tests/setjmp.c,
	  sdcc/support/regression/tests/loop.c:
	  Skip tests that fail due to broken FreeBSD 13 setjmp.
	* support/regression/tests/gcc-torture-execute-20040409-?.c:
	  Skip tests that fail due to broken clang.
	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_1_xy.c,
	  support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_auto_yx.c,
	  support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_global_xy.c:
	  Skip tests that fail due to broken clang 11 (memory model PNVI-ae-udi non-compliance).
	* sdccman.lyx:
	  Simplify --max-allocs-per-node documentation.

2021-04-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve heuristic for use of rabbit mul.

2021-04-19 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use genCopy also for assignment with source on extended stack.

2021-04-18 Sebastian 'basxto' Riedel <sdcc@basxto.de>
